# ggcode-app

./: Cargo.toml  README.md
ggcode_cli/: Cargo.toml
ggcode_cli/src/: main.rs
ggcode_cli/src/commands/: action.rs  chain.rs  generate.rs  init.rs  install.rs  mod.rs  repository.rs  run.rs  scroll.rs  target.rs
ggcode_cli/src/commands/autocomplete/: mod.rs
ggcode_cli/src/commands/completions/: mod.rs
ggcode_cli/src/commands/gen_target/: mod.rs
ggcode_cli/src/commands/generate/: mod.rs
ggcode_cli/src/commands/history/: mod.rs
ggcode_cli/src/commands/init/: mod.rs
ggcode_cli/src/commands/install/: mod.rs
ggcode_cli/src/commands/repository/: mod.rs
ggcode_cli/src/commands/scroll/: mod.rs
ggcode_cli/src/config/: builder.rs  mod.rs
ggcode_cli/src/greetings/: mod.rs
ggcode_cli/src/renderer/: builder.rs  lua_renderer.rs  luau_evaluator.rs  luau_extras.rs  mod.rs  noop_renderer.rs  tera_renderer.rs
ggcode_cli/src/storage/: mod.rs
ggcode_cli/src/structure/: mod.rs
ggcode_cli/src/tera_extras/: mod.rs
ggcode_cli/src/terminal/: flag.rs  input.rs  mod.rs  progress.rs
ggcode_cli/src/types/: mod.rs
ggcode_cli/src/utils/: errors.rs  mod.rs
ggcode_core/: Cargo.toml
ggcode_core/src/: action.rs  chain.rs  lib.rs  scroll.rs
ggcode_core/src/config/: mod.rs
ggcode_core/src/generator/: mod.rs
ggcode_core/src/luau/: luau_json.rs  luau_uuid.rs  luau_yaml.rs  mod.rs
ggcode_core/src/renderer/: builder.rs  luau_evaluator.rs  luau_extras.rs  luau_renderer.rs  mod.rs  tera_extras.rs  tera_functions.rs  tera_renderer.rs
ggcode_core/src/scroll/: mod.rs
ggcode_core/src/storage/: mod.rs
ggcode_core/src/utils/: errors.rs  mod.rs
