#[[bin]]
#name = "ggcode"
#path = "src/main.rs"

[package]
name = "ggcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
askama = "0.12.1"
clap = { version = "4.4.18", features = ["derive", "cargo", "string"] }
ggcode_core = { path = "../ggcode_core" }
libloading = "0.8.1"
dialoguer = "0.11.0"
prettytable-rs = "0.10.0"
git2 = "0.18.1"
