[package]
name = "ggcode_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5.1", features = ["derive", "cargo", "string"] }
clap_complete = "4.5.1"
dialoguer = "0.11.0"
prettytable-rs = "0.10.0"
tera = { version = "1.19.1", features = ["builtins"] }
indoc = "2.0.4"
relative-path = "1.9.2"
glob = "0.3.1"
serde_json = "1.0.114"
rand = "0.8.5"
convert_case = "0.6.0"
derive_builder = "0.20.0"
lazy_static = "1.4.0"
regex = "1.10.3"
mlua = { version = "0.9.5", features = ["luau", "serialize"] }
run_script = "0.10.1"
indicatif = "0.17.8"
console = "0.15.8"
uuid = { version = "1.8.0", features = ["v4"] }
